Add Supabase SQL setup script and secure .env files
- Added complete SQL schema for database setup
- Added instructions for running SQL setup
- Updated .gitignore to exclude .env files and secrets
- IMPORTANT: .env.development is now protected and will never be committed

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,20 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Environment variables - NEVER COMMIT!
+.env
+.env.*
+.env.local
+.env.development
+.env.production
+.env.staging
+
+# Supabase
+supabase/.temp
+supabase/.branches
+
+# Secrets
+*.key
+*.keystore
+android/key.properties
