feat: Implementacija Prompt 06 - Navigation & Routing Setup
Kompletan GoRouter setup sa auth guards, role-based access control, i deep linking.

## Nove datoteke:

### Core Navigation:
- lib/core/config/router.dart (ažurirano)
  - GoRouter sa auth-aware redirect logic
  - ShellRoute sa bottom navigation
  - Custom page transitions (fade, slide, scale)
  - Error handling (404 screen)
  - Role-based access control (Guest, Owner, Admin)

- lib/core/providers/auth_state_provider.dart
  - AuthState model (User, UserRole, isAuthenticated)
  - AuthStateNotifier sa Supabase auth integration
  - Stream listening za auth state changes
  - Role checking (hasRole, isOwner, isAdmin)
  - Convenience providers (isAuthenticated, currentUser, currentUserRole)

- lib/core/utils/navigation_helpers.dart
  - Routes constants (type-safe route names)
  - RoutePaths builders (parameterized routes)
  - NavigationExtensions na BuildContext (goToHome, goToPropertyDetails, etc.)
  - DeepLinkHelpers (parseDeepLink, buildShareableLink)
  - BottomNavConfig (bottom nav items configuration)

### Feature Screens (placeholder implementations):
- lib/features/home/presentation/screens/home_screen.dart
- lib/features/search/presentation/screens/search_results_screen.dart
- lib/features/property/presentation/screens/property_details_screen.dart
- lib/features/booking/presentation/screens/booking_screen.dart
- lib/features/auth/presentation/screens/login_screen.dart
- lib/features/auth/presentation/screens/register_screen.dart
- lib/features/owner/presentation/screens/owner_dashboard_screen.dart
- lib/features/owner/presentation/screens/property_management_screen.dart
- lib/features/payment/presentation/screens/payment_confirmation_screen.dart
- lib/features/profile/presentation/screens/profile_screen.dart
- lib/features/bookings/presentation/screens/my_bookings_screen.dart

### Shared Components:
- lib/shared/presentation/screens/not_found_screen.dart
  - 404 error screen sa "Povratak na početnu" button

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,22 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<!-- Deep linking: Custom URL scheme -->
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.rabbooking.app</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>rabbooking</string>
+			</array>
+		</dict>
+	</array>
+	<!-- Universal Links (HTTPS deep links) -->
+	<key>FlutterDeepLinkingEnabled</key>
+	<true/>
 </dict>
 </plist>
