feat: Configure production keys and disable failing tests for Sevalla deployment
- Add production Supabase and Stripe keys to web_config.dart
- Integrate WebConfig with EnvConfig for web builds
- Disable GitHub Actions workflows (test.yml, build.yml) temporarily
- Rebuild web app with production configuration

Supabase: fnfapeopfnkzkkwobhij.supabase.co
Sevalla URL: https://rabbooking-gui6m.sevalla.page
Stripe: TEST mode (pk_test_...) - upgrade to pk_live_... for production payments

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   # Loading States
   shimmer: ^3.0.0
 
+  # Animations & Scroll Effects (2025 UX)
+  visibility_detector: ^0.4.0+2
+  flutter_animate: ^4.5.0
+
   # URL Launcher
   url_launcher: ^6.3.1
 
