feat: Add build script with automatic Flutter SDK installation
- Create build.sh that auto-installs Flutter SDK on Sevalla
- Update package.json to use build.sh script
- Fix 'flutter: command not found' error on deployment
- Script downloads Flutter 3.24.0-stable and builds web app

This enables Sevalla to build Flutter web apps without pre-installed Flutter SDK

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "RAB Booking - Flutter Web Application",
   "scripts": {
-    "build": "flutter build web --release",
-    "install": "flutter pub get",
-    "postinstall": "echo 'Flutter dependencies installed'"
+    "build": "./build.sh",
+    "install": "echo 'Skipping npm install - using build.sh for Flutter setup'",
+    "postinstall": "echo 'Ready for build'"
   },
   "repository": {
     "type": "git",
