--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
         run: flutter pub get
 
       - name: Build web
-        run: flutter build web --web-renderer html --release
+        run: flutter build web --release
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
