--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="rab_booking"
+        android:label="BookBed"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -33,17 +33,20 @@
                 <data android:scheme="rabbooking" />
             </intent-filter>
 
-            <!-- Deep linking: HTTPS links (https://rabbooking.com) -->
+            <!-- Deep linking: HTTPS links (https://bookbed.io) -->
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data
                     android:scheme="https"
-                    android:host="rabbooking.com" />
+                    android:host="bookbed.io" />
                 <data
                     android:scheme="https"
-                    android:host="www.rabbooking.com" />
+                    android:host="www.bookbed.io" />
+                <data
+                    android:scheme="https"
+                    android:host="app.bookbed.io" />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
