feat: Complete rebrand from Rab Booking to BooBed
- Changed package name from rab_booking to bookbed
- Updated domain from rabbooking.com to bookbed.io
- Updated app name to "BooBed" across all platforms
- Updated Android package: com.example.rab_booking → io.bookbed.app
- Updated iOS bundle: com.example.novaAplikacija → io.bookbed.app
- Added new deep link scheme bookbed:// (kept rabbooking:// for backward compatibility)
- Updated 492 Dart files with new package imports
- Updated Cloud Functions URLs and branding
- Updated README and documentation
- Maintained backward compatibility for existing deep links and domains

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,12 +25,13 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
 
-            <!-- Deep linking: Custom scheme (rabbooking://) -->
+            <!-- Deep linking: Custom schemes (rabbooking:// + bookbed://) -->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="rabbooking" />
+                <data android:scheme="rabbooking" /> <!-- Legacy support -->
+                <data android:scheme="bookbed" />   <!-- New scheme -->
             </intent-filter>
 
             <!-- Deep linking: HTTPS links (https://bookbed.io) -->
