--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: rab_booking
-description: "Booking application for vacation rentals on island Rab, Croatia."
+name: bookbed
+description: "BooBed - Modern booking management platform for vacation rentals."
 publish_to: 'none'
 version: 1.0.0+1
 
