--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>rab_booking</string>
+	<string>bookbed</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -52,10 +52,11 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>com.rabbooking.app</string>
+			<string>io.bookbed.app</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>rabbooking</string>
+				<string>rabbooking</string> <!-- Legacy support -->
+				<string>bookbed</string>   <!-- New scheme -->
 			</array>
 		</dict>
 	</array>
