--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,14 +1,17 @@
 {
-    "name": "RAB Booking - Luxury Vacation Rentals",
-    "short_name": "RAB Booking",
+    "name": "BooBed - Vacation Rental Management",
+    "short_name": "BooBed",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0066FF",
     "theme_color": "#0066FF",
-    "description": "Discover your perfect vacation rental on the beautiful island of Rab, Croatia. Browse luxury properties, villas, and apartments with stunning Adriatic Sea views.",
+    "description": "Modern booking management platform for property owners and vacation rentals.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
-    "categories": ["travel", "lifestyle"],
+    "categories": [
+        "travel",
+        "lifestyle"
+    ],
     "icons": [
         {
             "src": "icons/Icon-192.png",
