Fix multiple UI/UX issues and navigation bugs
- Fix iframe orientation detection for Year Calendar using window.screen API
- Fix GoRouter pop() crashes by adding canPop() checks in bank_account_screen, change_password_screen, edit_profile_screen, unit_wizard_screen
- Fix email verification button text centering in email_field_with_verification.dart
- Fix email verification dialog auto-close after successful verification
- Fix payment button loading state - button now stays visible with spinner and text during processing
- Fix Stripe payment flow - reset _isProcessing before redirect and improve error handling
- Fix email verification expiry time inconsistency (changed from 10 to 30 minutes in dialog)
- Add verificationCodeExpiresInfo translation for all languages
- Improve button UX: show loading spinner with text instead of hiding button

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,13 +1,17 @@
 {
     "name": "BooBed - Vacation Rental Management",
     "short_name": "BooBed",
-    "start_url": ".",
+    "start_url": "/",
+    "scope": "/",
+    "id": "/",
     "display": "standalone",
     "background_color": "#0066FF",
     "theme_color": "#0066FF",
     "description": "Modern booking management platform for property owners and vacation rentals.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
+    "dir": "ltr",
+    "lang": "en",
     "categories": [
         "travel",
         "lifestyle"
