SF-016: AnimatedGradientFAB ValueNotifier optimization
- Replace setState with ValueNotifier<bool> for _isHovered and _isPressed
- Add dispose() method to clean up notifiers
- Use nested ValueListenableBuilder for targeted rebuilds
- Reduces unnecessary widget rebuilds on hover/press events

Source: bolt-fab-optimization-15222173821366124532

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,16 +1,27 @@
 {
   "projects": {
-    "default": "rab-booking-248fc"
+    "default": "rab-booking-248fc",
+    "development": "bookbed-dev",
+    "staging": "bookbed-staging",
+    "production": "rab-booking-248fc"
   },
   "targets": {
     "rab-booking-248fc": {
       "hosting": {
-        "widget": [
-          "bookbed-widget"
-        ],
-        "owner": [
-          "bookbed-owner"
-        ]
+        "widget": ["bookbed-widget"],
+        "owner": ["bookbed-owner"]
+      }
+    },
+    "bookbed-dev": {
+      "hosting": {
+        "widget": ["bookbed-widget-dev"],
+        "owner": ["bookbed-owner-dev"]
+      }
+    },
+    "bookbed-staging": {
+      "hosting": {
+        "widget": ["bookbed-widget-staging"],
+        "owner": ["bookbed-owner-staging"]
       }
     }
   },
