--- a/sentry.properties
+++ b/sentry.properties
@@ -1,12 +1,12 @@
-# Sentry configuration for source maps upload
-# This file is used by sentry_dart_plugin to upload source maps during build
+# GlitchTip configuration (Sentry SDK-compatible)
+# Source maps upload may not be available on GlitchTip Free plan
+# If needed, upgrade to paid plan and configure auth token
 
-defaults.project=bookbed
+defaults.project=14195
 defaults.org=bookbed
 
-# DSN is configured in main.dart, but we need it here for source maps upload
-# Note: This is a public DSN (safe to commit) - it's only used for uploading source maps
-defaults.url=https://o4510516866908160.ingest.de.sentry.io
+# GlitchTip server URL
+defaults.url=https://app.glitchtip.com
 
-# Source maps will be uploaded automatically during build when using sentry_dart_plugin
-# The plugin hooks into Flutter's build process and uploads source maps after web build
+# Note: Source maps upload requires GlitchTip paid plan with API token
+# For now, error tracking works without source maps (just less readable stack traces)
