--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,24 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>592597958982-a38onq6ft57de2dprnsi3lg0rog27bvg.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.592597958982-a38onq6ft57de2dprnsi3lg0rog27bvg</string>
-	<key>ANDROID_CLIENT_ID</key>
-	<string>592597958982-d1s4sho1bmnekkfr1vr80gnffc74bbp9.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAOFQ2jykLZlTtE6whuGDb-09r8HyAHs90</string>
+	<string>AIzaSyAnnBk6C9SJn0oXFKaIYKh9P5EgyBUtYxI</string>
 	<key>GCM_SENDER_ID</key>
-	<string>592597958982</string>
+	<string>584902480248</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>io.bookbed.app</string>
 	<key>PROJECT_ID</key>
-	<string>rab-booking-248fc</string>
+	<string>bookbed-staging</string>
 	<key>STORAGE_BUCKET</key>
-	<string>rab-booking-248fc.firebasestorage.app</string>
+	<string>bookbed-staging.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:592597958982:ios:157b8d20e9e17aa7d3e547</string>
+	<string>1:584902480248:ios:c7e20d5f21438baf94f88d</string>
 </dict>
 </plist>
