--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Generate code (build_runner)
         run: dart run build_runner build --delete-conflicting-outputs
 
+      - name: Format code
+        run: dart format .
+      
       - name: Verify formatting
         run: dart format --output=none --set-exit-if-changed .
 
