chore: Migrate from GlitchTip to Sentry.io for error tracking
- Update DSN in lib/main.dart (owner dashboard)
- Update DSN in lib/widget_main.dart (booking widget)
- Update DSN in functions/src/sentry.ts (Cloud Functions)
- Update DSN in lib/core/config/environment.dart
- Update sentry.properties with Sentry.io config

GlitchTip had issues displaying events despite reaching quota.
Sentry.io provides better reliability and 5K events/month free.

--- a/sentry.properties
+++ b/sentry.properties
@@ -1,12 +1,12 @@
-# GlitchTip configuration (Sentry SDK-compatible)
-# Source maps upload may not be available on GlitchTip Free plan
-# If needed, upgrade to paid plan and configure auth token
+# Sentry.io configuration for error tracking
+# Source maps upload requires auth token (optional)
 
-defaults.project=14195
+defaults.project=bookbed
 defaults.org=bookbed
 
-# GlitchTip server URL
-defaults.url=https://app.glitchtip.com
+# Sentry server URL
+defaults.url=https://sentry.io
 
-# Note: Source maps upload requires GlitchTip paid plan with API token
+# Note: Source maps upload requires Sentry auth token
+# Generate at: https://sentry.io/settings/account/api/auth-tokens/
 # For now, error tracking works without source maps (just less readable stack traces)
