feat: add Firebase hosting config for admin.bookbed.io
- Add admin target to firebase.json (public: build/web_admin)
- Add admin site mappings to .firebaserc for all environments:
  - production: bookbed-admin
  - staging: bookbed-admin-staging
  - dev: bookbed-admin-dev

--- a/.firebaserc
+++ b/.firebaserc
@@ -9,19 +9,22 @@
     "rab-booking-248fc": {
       "hosting": {
         "widget": ["bookbed-widget"],
-        "owner": ["bookbed-owner"]
+        "owner": ["bookbed-owner"],
+        "admin": ["bookbed-admin"]
       }
     },
     "bookbed-dev": {
       "hosting": {
         "widget": ["bookbed-widget-dev"],
-        "owner": ["bookbed-owner-dev"]
+        "owner": ["bookbed-owner-dev"],
+        "admin": ["bookbed-admin-dev"]
       }
     },
     "bookbed-staging": {
       "hosting": {
         "widget": ["bookbed-widget-staging"],
-        "owner": ["bookbed-owner-staging"]
+        "owner": ["bookbed-owner-staging"],
+        "admin": ["bookbed-admin-staging"]
       }
     }
   },
