--- a/web/manifest.json
+++ b/web/manifest.json
@@ -5,8 +5,8 @@
     "scope": "/",
     "id": "/",
     "display": "standalone",
-    "background_color": "#0066FF",
-    "theme_color": "#0066FF",
+    "background_color": "#FFFFFF",
+    "theme_color": "#304FFE",
     "description": "Modern booking management platform for property owners and vacation rentals.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
