--- a/firebase.json
+++ b/firebase.json
@@ -113,15 +113,15 @@
         "platforms": {
             "android": {
                 "default": {
-                    "projectId": "bookbed-staging",
-                    "appId": "1:584902480248:android:a53609e3e6dc177d94f88d",
+                    "projectId": "bookbed-dev",
+                    "appId": "1:733027606474:android:90cb9dbd5e2e4adbebf933",
                     "fileOutput": "android/app/google-services.json"
                 }
             },
             "ios": {
                 "default": {
-                    "projectId": "bookbed-staging",
-                    "appId": "1:584902480248:ios:c7e20d5f21438baf94f88d",
+                    "projectId": "bookbed-dev",
+                    "appId": "1:733027606474:ios:600363248e5e0e5aebf933",
                     "uploadDebugSymbols": true,
                     "fileOutput": "ios/Runner/GoogleService-Info.plist"
                 }
