--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyAnnBk6C9SJn0oXFKaIYKh9P5EgyBUtYxI</string>
+	<string>AIzaSyA857meSxpfUFDvF7ZorkTrKrOQZi152go</string>
 	<key>GCM_SENDER_ID</key>
-	<string>584902480248</string>
+	<string>733027606474</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>io.bookbed.app</string>
 	<key>PROJECT_ID</key>
-	<string>bookbed-staging</string>
+	<string>bookbed-dev</string>
 	<key>STORAGE_BUCKET</key>
-	<string>bookbed-staging.firebasestorage.app</string>
+	<string>bookbed-dev.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:584902480248:ios:c7e20d5f21438baf94f88d</string>
+	<string>1:733027606474:ios:600363248e5e0e5aebf933</string>
 </dict>
 </plist>
