--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,19 +114,31 @@ dev_dependencies:
 
   # Icon Generation
   flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.4.3
 
 flutter_launcher_icons:
   android: "ic_launcher"
   ios: true
-  image_path: "assets/images/logo-light.png"
+  image_path: "assets/images/logo-light.png" # Primary for iOS/Web
+  image_path_android: "assets/images/Play_Store_App_Icon.png" # Specific for Android
   min_sdk_android: 21 # Required for adaptive icons
   adaptive_icon_background: "#FFFFFF" # White background
-  adaptive_icon_foreground: "assets/images/logo-light.png"
+  adaptive_icon_foreground: "assets/images/app-icon-foreground.png"
   web:
     generate: true
     image_path: "assets/images/logo-light.png"
     background_color: "#FFFFFF"
     theme_color: "#304FFE"
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: "assets/images/Apple_App_Icon.png"
+  android_12:
+    image: "assets/images/app-icon-foreground.png"
+    icon_background_color: "#FFFFFF"
+  android: true
+  ios: true
+  web: false # We use a custom HTML splash for web
 
 flutter:
   uses-material-design: true
