fix: Resolve crashes (GoogleFonts missing assets, play-services-auth version) and lint errors
- Fixed crash in production by forcing play-services-auth 21.2.0 (replaces buggy 20.7.0)

- Fixed offline font crash by downloading Google Fonts (Playfair Display, Inter) locally

- Added missing GoogleFonts.config.allowRuntimeFetching = false to all environment entry points

- Fixed redundant argument lint errors in TimelineCalendarWidget

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -148,6 +148,7 @@ flutter:
   # Assets
   assets:
     - assets/translations/
+    - assets/google_fonts/
     - assets/images/
     - assets/images/platforms/
 
