--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -75,6 +75,9 @@
 		<string>Access to camera is required to photograph your properties</string>
 		<key>NSPhotoLibraryAddUsageDescription</key>
 		<string>Access to photo library is required to save photos</string>
+		<!-- Encryption Compliance -->
+		<key>ITSAppUsesNonExemptEncryption</key>
+		<false/>
 		<key>UIStatusBarHidden</key>
 		<false/>
 	</dict>
